fix for gdc on mobile. Fix for vol since not all pages have fancybox plug-in

--- a/src/modules/returnToNCI/_global-adjust--fundedresearch.scss
+++ b/src/modules/returnToNCI/_global-adjust--fundedresearch.scss
@@ -1,8 +1,11 @@
+@import 'mixins';
 // site specific style fix
-body {
-  display: inline-block;
-}
-
 #nci-banner {
   padding-top: 20px;
+}
+
+@include bp(1000px) {
+  body {
+    display: inline-block;
+  }
 }
