--- a/src/modules/returnToNCI/_global-adjust--gdc.scss
+++ b/src/modules/returnToNCI/_global-adjust--gdc.scss
@@ -1,5 +1,12 @@
+@import "mixins";
 // site specific style fix
 .form-item-search-block-form label.element-invisible {
   left: auto;
   visibility: hidden;
+}
+
+@media only screen and (min-width: 992px) {
+ html > body {
+    overflow-x: visible !important;
+  }
 }
